--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
 <div class="main-container ace-save-state" id="main-container">
     <div class="main-content">
         <div class="main-content-inner">
-            <div class="page-content" id="page-content">
+            <div class="page-content" id="book-page-content">
                 <div class="page-header">
                     {% block header %}
                     {% endblock %}
