--- a/templates/book.html
+++ b/templates/book.html
@@ -1,7 +1,109 @@
 {% extends 'base.html' %}
+
+{% block header %}
+    <div>
+        <table class="table table-bordered">
+            <tr>
+                <td style="background-color: whitesmoke; color: grey"><span class="bigger-110">会议室</span></td>
+                <td><span class="blue bigger-105">腾龙阁</span></td>
+                <td style="background-color: whitesmoke; color: grey"><span class="bigger-110">开始时间</span></td>
+                <td><span class="blue bigger-105">14:30:00</span></td>
+                <td style="background-color: whitesmoke; color: grey"><span class="bigger-110">结束时间</span></td>
+                <td><span class="blue bigger-105">15:30:00</span></td>
+            </tr>
+        </table>
+    </div>
+{% endblock %}
+
 {% block page_content %}
-   预定页面
+    <div class="row">
+        <div class="col-xs-12">
+            <!-- PAGE CONTENT BEGINS -->
+            <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 会议主题
+                        <span style="color: orangered">*</span>
+                    </label>
+                    <div class="col-sm-9">
+                        <input type="text" id="form-field-1" placeholder="" class="col-xs-10 col-sm-5"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 会议大纲
+                        <span style="color: orangered">*</span>
+                    </label>
+                    <div class="col-sm-9">
+                        <textarea class="col-xs-10 col-sm-5" id="form-field-8" placeholder=""></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-xs-12 col-sm-3 no-padding-right"> 参会人员
+                        <span style="color: orangered">*</span>
+                    </label>
+                    <div class="col-xs-12 col-sm-9">
+                        <select multiple="" id="state" name="state" class="select2"
+                                data-placeholder="Click to Choose...">
+                            <option value="AL">chenlin002[陈林]</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="AR">Arkansas</option>
+                            <option value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DE">Delaware</option>
+                            <option value="FL">Florida</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 邮件通知
+                        <span style="color: white">*</span>
+                    </label>
+                    <div class="col-sm-9">
+                        <div class="checkbox col-xs-12 col-sm-9">
+                            <label>
+                                <input name="col-xs-12 col-sm-9 form-field-checkbox" type="checkbox" class="ace">
+                                <span class="lbl"></span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="clearfix form-actions">
+                    <div class="col-md-offset-3 col-md-9">
+                        <button class="btn btn-info" type="button">
+                            <i class="ace-icon fa fa-check bigger-110"></i>发起预定
+                        </button>
+
+                        &nbsp; &nbsp; &nbsp;
+                        <button class="btn" type="reset">
+                            <i class="ace-icon fa fa-undo bigger-110"></i>取消预定
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
 {% endblock %}
 
 {% block external_script %}
+    <script>
+        var getUrlParameter = function getUrlParameter(sParam) {
+            var sPageURL = decodeURIComponent(window.location.search.substring(1)),
+                sURLVariables = sPageURL.split('&'),
+                sParameterName,
+                i;
+            for (i = 0; i < sURLVariables.length; i++) {
+                sParameterName = sURLVariables[i].split('=');
+                if (sParameterName[0] === sParam) {
+                    return sParameterName[1] === undefined ? true : sParameterName[1];
+                }
+            }
+        };
+
+        var meetingRoomName = getUrlParameter('meetingroom');
+        console.log(meetingRoomName, 'xxxx')
+    </script>
 {% endblock %}
