--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
     {#    <link rel="stylesheet" href="{% static 'assets/css/ace-part2.min.css' %}" class="ace-main-stylesheet"/>#}
     <link rel="stylesheet" href="{% static 'assets/css/ace-skins.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'assets/css/ace-rtl.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'assets/css/bootstrap-multiselect.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'assets/css/bootstrap-duallistbox.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'assets/css/select2.min.css' %}"/>
     <script src="{% static 'assets/js/ace-extra.min.js' %}"></script>
 </head>
 
@@ -104,6 +107,9 @@
 <script src="{% static 'assets/js/vue.js' %}"></script>
 <script src="{% static 'assets/js/vue-resource.min.js' %}"></script>
 <script src="{% static 'assets/js/vue-filter.min.js' %}"></script>
+<script src="{% static 'assets/js/bootstrap-multiselect.min.js' %}"></script>
+<script src="{% static 'assets/js/jquery.bootstrap-duallistbox.min.js' %}"></script>
+<script src="{% static 'assets/js/select2.min.js' %}"></script>
 
 {% block external_script %}
 {% endblock %}
